--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,3 @@
-$padding: 8px;
-$border: 1px #0c1f3f solid;
-$border-trans: 1px transparent solid;
-
 $color-text: #fff;
 $color-bg1: #0e387e;
 $color-bg2: #3b78c0;
@@ -11,8 +7,13 @@ $color-mid: #2f5d94;
 $color-50white: rgba(255,255,255,0.5);
 $color-midi-note-velocity: #6ba2af;
 $color-midi-note: #8fd8ea;
-
 $color-highlight: #fdcd32;
+$color-play: #30a7ff;
+
+$padding: 8px;
+$border: 2px $color-bg1 solid;
+$border-trans: 1px transparent solid;
+$border-dark: 1px #333 solid;
 
 ::-webkit-scrollbar { display:none; }
 
@@ -114,7 +115,7 @@ $keys-height: 50px;
         .song-header {
             display:flex;
             height: 32px;
-            border-bottom: $border;
+            // border-bottom: $border;
 
             .track-heads {
                 display:flex;
@@ -141,6 +142,45 @@ $keys-height: 50px;
                 .scene-head {
                     height: $track-block-height;
                     border-bottom: $border;
+                    display: flex;
+
+                    &:nth-child(odd) {
+                        background-color: rgba($color-bg2, 0.5);
+                    }
+
+                    div {
+                        flex:1;
+                        justify-content: center;
+                        align-items: center;
+                        display: flex;
+                        font-size: 2.5em;
+                        font-weight: bold;
+                        color: rgba(#fff, 0.8);
+                    }
+                    i {
+                        cursor: pointer;
+                        flex:1;
+                        font-size: 4em;
+                        color: rgba($color-play, 0.8);
+                        justify-content: center;
+                        align-items: center;
+                        display: flex;
+                    }
+                }
+                .scene-add {
+                    @extend .scene-head;
+                    border:none;
+                    display: flex;
+                    align-items: center;
+                    background-color: transparent !important;
+
+                    i {
+                        cursor: pointer;
+                        flex: 1;
+                        text-align: center;
+                        font-size: 1.8rem;
+                        color: rgba(#fff, 0.8);
+                    }
                 }
             }
             .loops {
@@ -158,6 +198,9 @@ $keys-height: 50px;
                         min-width: $track-block-width;
                         border-right: $border;
                         border-bottom: $border;
+                        &.placeholder {
+                            border:none;
+                        }
                     }
                 }
             }
@@ -169,6 +212,8 @@ $keys-height: 50px;
             max-height: 100px;
             border-top: $border;
             background: linear-gradient(#181818 30%, #000);
+            color: #999;
+            text-shadow: 1px 1px 1px #000;
 
             .instruments {
                 display: flex;
@@ -177,7 +222,29 @@ $keys-height: 50px;
             .instrument {
                 text-align: center;
                 min-width: $track-block-width;
-                border-right: 1px #333 solid;
+                border-right: $border-dark;
+            }
+            .instrument-add {
+                @extend .instrument;
+                border: none;
+                cursor: pointer;
+
+                .outline {
+                    margin: 12px;
+                    height: calc(100% - 24px);
+                    width: calc(100% - 24px);
+                    border: 6px dashed rgba(#999, 0.3);
+                    border-radius: 22px;
+                    justify-content: center;
+                    align-items: center;
+                    display: flex;
+
+                    i {
+                        line-height: 2.2;
+                        font-size: 1.8em;
+                        color: rgba(#999, 0.75);
+                    }
+                }
             }
         }
     }
@@ -205,12 +272,12 @@ $keys-height: 50px;
                     color: $color-bg1;
                     flex: 1;
                     margin: 4px;
-                    font-size: 0.7em;
+                    font-size: 0.7rem;
                     text-align: center;
                     padding-top: 8px;
                     border-radius: 1px;
 
-                    i { font-size: 2.5em }
+                    i { font-size: 1.8rem }
 
                     &.active {
                         background-color: $color-highlight;
