--- a/src/style.scss
+++ b/src/style.scss
@@ -170,13 +170,26 @@ $keys-height: 50px;
                     height: $track-block-height;
                     // border-bottom: $border;
                     display: flex;
+                    position: relative;
+
+                    .playhead {
+                        pointer-events: none;
+                        z-index: 0;
+                        position: absolute;
+                        top: 0;
+                        left: -100%;
+                        width: 100%;
+                        height: 100%;
+                        background: $color-highlight;
+                    }
 
                     &:nth-child(odd) {
                         background-color: rgba($color-bg2, 0.5);
                     }
 
                     div {
-                        flex:1;
+                        flex: 1;
+                        z-index: 1;
                         justify-content: center;
                         align-items: center;
                         display: flex;
@@ -184,16 +197,19 @@ $keys-height: 50px;
                         font-weight: bold;
                         color: rgba(#fff, 0.8);
                     }
+
                     i {
+                        flex: 1;
+                        z-index: 1;
+                        display: flex;
                         cursor: pointer;
-                        flex:1;
                         font-size: 4em;
                         color: rgba($color-play, 0.8);
                         justify-content: center;
                         align-items: center;
-                        display: flex;
                     }
                 }
+
                 .scene-add {
                     @extend .scene-head;
                     border:none;
@@ -210,6 +226,7 @@ $keys-height: 50px;
                     }
                 }
             }
+
             .loops {
                 display: flex;
                 overflow: auto;
@@ -227,10 +244,22 @@ $keys-height: 50px;
                     }
 
                     .loop {
-                        text-align: center;
+                        overflow: hidden;
+                        position: relative;
+                        height: $track-block-height;
                         min-width: $track-block-width;
                         margin-right: $border-size;
-                        height:  $track-block-height;
+                        text-align: center;
+
+                        .playhead {
+                            pointer-events: none;
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            height: 100%;
+                            width: 100%;
+                            border-left: 1px $color-highlight solid;
+                        }
 
                         &.placeholder {
                             border:none;
@@ -397,7 +426,6 @@ $keys-height: 50px;
                 }
             }
         }
-
         .pattern-content {
             display: flex;
             flex: 1;
@@ -429,6 +457,34 @@ $keys-height: 50px;
 
             .right {
                 overflow: auto;
+                position: relative;
+
+                .playhead {
+                    pointer-events: none;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 1px;
+                    background: $color-highlight;
+                    transition: background 0.25s ease;
+
+                    &:after {
+                        content: '';
+                        position:absolute;
+                        top: 0;
+                        left: 0;
+                        height: 100%;
+                        width: 0;
+                        transition: width 0.5s ease, left 0.5s ease;
+                    }
+
+                    &.active:after {
+                        left: -64px;
+                        width: 64px;
+                        background: linear-gradient(-90deg, rgba($color-highlight, 0.3), transparent);
+                    }
+
+                }
 
                 .grid {
                     &.edit {
