--- a/src/style.scss
+++ b/src/style.scss
@@ -16,6 +16,153 @@ $border: $border-size $color-bg1 solid;
 $border-trans: $border-size transparent solid;
 $border-dark: $border-size #333 solid;
 
+.inset-bar {
+    background: rgba(#333, 0.3);
+    border-top: 2px #000 solid;
+    border-bottom: 1px #333 solid;
+    box-shadow: inset 0 0 3px #000;
+}
+
+button {
+    padding:4px 16px;
+    color:#999;
+    background: #121212;
+    border: 2px #000 solid;
+    box-shadow: inset 0 1px 1px #333, 1px 1px 3px rgba(0,0,0,0.7);
+    border-radius: 3px;
+    outline: none;
+    text-shadow: 0 0 2px #000;
+    margin-right: 4px;
+    height: 32px;
+    i { line-height: 0.9 !important }
+
+    &:active {
+        box-shadow: inset 0 1px 1px #000, 0 0 0;
+    }
+}
+.fader {
+    @extend .inset-bar;
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+    $slider-height: 26px;
+    .slider-wrap {
+        height: calc(100% - #{$slider-height});
+    }
+    .slider {
+        position: absolute;
+        width: 100%;
+        height: $slider-height;
+        box-shadow: 0 1px 1px #000, 0 0px 1px #000;
+
+        .bar {
+            position: absolute;
+            top: 8px;
+            left: 2px;
+            height: 6px;
+            width: calc(100% - 4px);
+            background: #6c6c6c;
+            border-radius: 1px;
+
+            &:before {
+                content: '';
+                position: absolute;
+                top: -7px;
+                left: 0;
+                height: 6px;
+                width: 100%;
+                background: linear-gradient(0, #515151, transparent);
+            }
+
+            &:after {
+                content: '';
+                position: absolute;
+                top: 7px;
+                left: 0;
+                height: 10px;
+                width: 100%;
+                background: #131313;
+                border-top: 1px #333 solid;
+            }
+        }
+
+        &:before {
+            content: '';
+            position: absolute;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            box-shadow: -4px 0 8px rgba(#000, 0.25);
+        }
+
+        &:after {
+            content: '';
+            position: absolute;
+            top: 2px;
+            right: 0;
+            width: 100%;
+            height: 100%;
+            box-shadow: 8px 0 8px rgba(#000, 0.3);
+        }
+    }
+}
+
+.knob {
+    position: relative;
+    height: 64px;
+    width: 64px;
+    border-radius: 50%;
+    box-shadow: inset 0 0 8px #000, inset -2px -4px 8px #000, 0 1px 1px #333;
+
+    .handle {
+        position: absolute;
+        height: 52px;
+        width: 52px;
+        background: #8484841f;
+        top: 6px;
+        left: 6px;
+        border-radius: 50%;
+        box-shadow: inset 0 -8px 8px #000, inset 0 1px 10px #666;
+
+        .dot {
+            position: absolute;
+            border-radius: 50%;
+            height: 8px;
+            width: 8px;
+            background: #d2d2d2;
+            top: 4px;
+            left: calc(50% - 4px);
+            transform-origin: 50% 16px;
+        }
+    }
+}
+
+.levels {
+    display: flex;
+    height: 100%;
+
+    .left, .right {
+        flex: 1;
+        height: 100%;
+    }
+    .left  { padding-right: $padding/2 }
+    .right { padding-left:  $padding/2 }
+
+    .level-indicator {
+        @extend .inset-bar;
+        height: 100%;
+        overflow: hidden;
+        background: linear-gradient(180deg, rgba(22, 68, 138, 0.15), #000);
+
+        .indicator {
+            height: 100%;
+            background: linear-gradient(180deg, rgba(22, 68, 138, 0.5), #000);
+            border-top: 1px #285ea5 solid;
+        }
+    }
+}
+
 ::-webkit-scrollbar { display:none; }
 
 * {
@@ -84,6 +231,41 @@ $track-instrument-height: 100px;
 
 $left-keys-width: 100px;
 $keys-height: 50px;
+
+.track-controls {
+    display: flex;
+    height: calc(100% - 110px);
+
+    .lhs, .rhs {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        padding: $padding;
+    }
+    .lhs { padding-right: 0 }
+    .rhs { padding-left: 0 }
+
+    .track-volume, .track-send {
+        display: flex;
+        flex: 1;
+        flex-direction: column;
+        align-items: center;
+    }
+    .volume, .send {
+        flex: 1;
+        width: 100%;
+        padding: $padding $padding * 2;
+    }
+
+    .buttons {
+        display: flex;
+        flex-direction: column;
+        button {
+            margin-bottom: $padding/2;
+            font-weight: bold
+        }
+    }
+}
 
 .sequencer {
     user-select: none;
@@ -272,8 +454,6 @@ $keys-height: 50px;
 
         .song-footer {
             display: flex;
-            flex: 1;
-            max-height: 100px;
             border-top: $border;
             background-color: #181818;
             // linear-gradient(#181818 30%, #000);
@@ -281,20 +461,48 @@ $keys-height: 50px;
             color: #999;
             text-shadow: 1px 1px 1px #000;
 
+            height: 120px;
+            transition: height 0.125s ease; // TODO do not animate height
+            &.expand { height: 550px }
+
             .instruments {
                 display: flex;
                 overflow: auto;
             }
+
             .instrument {
                 text-align: center;
                 min-width: $track-block-width + $border-size;
-                border-right: $border-dark;
                 text-transform: capitalize;
+                border-radius: 2px;
+                border-right: 1px transparent solid;
+                border-left: 1px #000 solid;
+                border-top: 1px #555 solid;
+                box-shadow: inset 0 0 8px rgba(#333, 0.5), inset 0 1px 1px #555;
+
+                .title {
+
+                }
+
+                .image {
+                    background: linear-gradient(0deg, rgba(#000,0.3), rgba(#333,0.8));
+                    margin: 0 8px;
+                    width: calc(100% - 16px);
+                    height: 88px;
+                    border: 1px #333 solid;
+                    border-top: 2px #000 solid;
+                    box-shadow: inset 0 0 3px #000;
+                    img { height: 100% }
+                }
             }
+
             .instrument-add {
                 @extend .instrument;
-                border: none;
                 cursor: pointer;
+                border-top: none;
+                border-left: 1px rgba(#000, 0.5) solid;
+                border-right: none;
+                box-shadow: none;
 
                 .outline {
                     margin: 12px;
@@ -309,7 +517,7 @@ $keys-height: 50px;
                     i {
                         line-height: 2.2;
                         font-size: 1.8em;
-                        color: rgba(#999, 0.75);
+                        color: rgba(#fff, 0.8);
                     }
                 }
             }
@@ -328,6 +536,11 @@ $keys-height: 50px;
             height: 33.33%;
             border: $border;
             text-transform: capitalize;
+            position: relative;
+
+            background-size: 80%;
+            background-repeat: no-repeat;
+            background-position: center;
         }
     }
 
@@ -563,21 +776,6 @@ $keys-height: 50px;
         border-top: 1px #333 solid;
 
         button {
-            padding:4px 16px;
-            color:#999;
-            background: #181818;
-            border: 2px #000 solid;
-            box-shadow: inset 0 1px 1px #333, 1px 1px 3px rgba(0,0,0,0.7);
-            border-radius: 3px;
-            outline: none;
-            text-shadow: 0 0 2px #000;
-            margin-right: 4px;
-            height: 32px;
-            i { line-height: 0.9 }
-
-            &:active {
-                box-shadow: inset 0 1px 1px #000, 0 0 0;
-            }
 
             &.record {
                 &.active { color: #ce1d49 }
