enable midi switch per track

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -16,7 +16,7 @@ button {
     outline: none;
     text-shadow: 0 0 2px #000;
     height: 32px;
-    
+
     i { line-height: 0.9 !important }
     &:active { box-shadow: inset 0 1px 1px #000, 0 0 0 }
 }
@@ -30,6 +30,7 @@ button {
     $slider-height: 26px;
     .slider-wrap {
         height: calc(100% - #{$slider-height});
+        pointer-events: none;
     }
     .slider {
         position: absolute;
