--- a/src/styles/pattern.scss
+++ b/src/styles/pattern.scss
@@ -111,7 +111,7 @@
                     border-right: 22px solid rgba(255,255,255, 0.6);
                     margin-top: 1px;
                     background: rgba($color-bg2, 0.3);
-                    height: 32px;
+                    height: 32px; // $note-height 
                     line-height: 2.6;
                     box-shadow: inset 0 1px 1px $color-light;
 
