repeat/play next scene on transport loopEnd

--- a/src/styles/transport-control.scss
+++ b/src/styles/transport-control.scss
@@ -23,6 +23,8 @@
             padding: 4px 2px;
         }
 
+        &.active { color: #00a551 }
+
         &.tempo {
             margin-left: 8px;
             padding: 4px;
