--- a/src/styles/song.scss
+++ b/src/styles/song.scss
@@ -57,7 +57,7 @@
                     background-color: rgba($color-bg2, 0.5);
                 }
 
-                div {
+                .name {
                     flex: 1;
                     z-index: 1;
                     justify-content: center;
@@ -77,6 +77,27 @@
                     color: rgba($color-play, 0.8);
                     justify-content: center;
                     align-items: center;
+                }
+
+                // TODO consolidate with loop-overlay
+                .scene-head-overlay {
+                    position: absolute;
+                    font-size: 1em;
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    z-index: 1;
+                    flex-wrap: wrap;
+                    background: rgba($color-bg1, 0.9);
+
+                    .quad {
+                        min-width: 50%;
+                        height: 50%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        text-align: center;
+                    }
                 }
             }
 
@@ -119,6 +140,27 @@
                     min-width: $track-block-width;
                     margin-right: $border-size;
                     text-align: center;
+
+                    .loop-overlay {
+                        height: 100%;
+                        width: 100%;
+                        display: flex;
+                        flex-wrap: wrap;
+                        position: relative;
+                        background: rgba($color-bg1, 0.9);
+
+                        .quad {
+                            height: 50%;
+                            width: 50%;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            
+                            &.warn {
+                                background-color: rgba(255, 0, 0, 0.35);
+                            }
+                        }
+                    }
 
                     img {
                         position: absolute;
