--- a/src/styles/song.scss
+++ b/src/styles/song.scss
@@ -1,3 +1,25 @@
+.overlay {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    background: rgba($color-bg1, 0.9);
+    position: relative;
+
+    .quad {
+        min-width: 50%;
+        height: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+
+        &.warn {
+            background-color: rgba(255, 0, 0, 0.35);
+        }
+    }
+}
+
 .song {
     flex: 1;
     display: flex;
@@ -79,25 +101,11 @@
                     align-items: center;
                 }
 
-                // TODO consolidate with loop-overlay
                 .scene-head-overlay {
+                    @extend .overlay;
                     position: absolute;
                     font-size: 1em;
-                    width: 100%;
-                    height: 100%;
-                    display: flex;
                     z-index: 1;
-                    flex-wrap: wrap;
-                    background: rgba($color-bg1, 0.9);
-
-                    .quad {
-                        min-width: 50%;
-                        height: 50%;
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: center;
-                        text-align: center;
-                    }
                 }
             }
 
@@ -142,24 +150,7 @@
                     text-align: center;
 
                     .loop-overlay {
-                        height: 100%;
-                        width: 100%;
-                        display: flex;
-                        flex-wrap: wrap;
-                        position: relative;
-                        background: rgba($color-bg1, 0.9);
-
-                        .quad {
-                            height: 50%;
-                            width: 50%;
-                            display: flex;
-                            flex-direction: column;
-                            justify-content: center;
-                            
-                            &.warn {
-                                background-color: rgba(255, 0, 0, 0.35);
-                            }
-                        }
+                        @extend .overlay;
                     }
 
                     img {
