boring css loop options

--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,7 @@
 @import './styles/base';
 
 @import './styles/instruments-selector';
+@import './styles/options';
 @import './styles/pattern';
 @import './styles/sequencer';
 @import './styles/song';
