--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -177,18 +177,33 @@ button {
 
 .popup {
     position: absolute;
-    background: #fff;
-    box-shadow: 2px 2px 8px rgba(#000, 0.3);
+    background: $color-white;
+    box-shadow: 2px 2px 8px rgba($color-black, 0.3);
     padding: 16px;
     border-radius: 5px;
-    color: #000;
+    color: $color-black;
     z-index: 20; // TODO fix me
 
-    $caret-size: 16px;
+    &.dark, &.floating {
+        border-radius: 2px;
+        box-shadow: 8px 8px 12px rgba($color-black, 0.5);
+        .caret { display: none }
+    }
 
+    &.dark {
+        color: $color-white;
+        background: $color-black-alpha;
+        border-radius: 0;
+    }
+
+    &.floating {
+        background: rgba($color-white, 0.95);
+    }
+
+    $caret-size: 16px;
     .caret {
         position: absolute;
-        background: #fff;
+        background: $color-white;
         width: $caret-size;
         height: $caret-size;
 
